Fixed typo in link title

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -7,7 +7,7 @@
           <h4 class="footer-title">Shopify Themes</h4>
           <div class="grid">
             <div class="grid-item one-half">
-              <p><a href="https://themes.shopify.com/services/themes/guidelines?ref=Timber" title="Guidlines for selling themes" class="footer-link">Selling Themes</a></p>
+              <p><a href="https://themes.shopify.com/services/themes/guidelines?ref=Timber" title="Guidelines for selling themes" class="footer-link">Selling Themes</a></p>
             </div>
             <div class="grid-item one-half">
               <p><a href="https://ecommerce.shopify.com/c/ecommerce-design?ref=Timber" title="Meet the community" class="footer-link">Shopify Forums</a></p>
