--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,5 +10,34 @@
 
     {% include footer.html %}
 
+    <script type="text/javascript" src="//visitors.shopify.com/track.js?v=2"></script>
+    <script type="text/javascript">_visit.tag('timber');</script>
+    <script type="text/javascript">
+      var _gaq = _gaq || [];
+      _gaq.push(['_setAccount', 'UA-82702-3']);
+      _gaq.push(['_setDomainName', 'shopify.com']);
+      _gaq.push(['_setAllowLinker', true]);
+      _gaq.push(['_setCustomVar', 5, 'token', _visit.multitrackToken(), 1]);
+      _gaq.push(['_trackPageview']);
+
+      (function() {
+        var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+        ga.src = ('https:' == document.location.protocol ? 'https://' : 'http://') + 'stats.g.doubleclick.net/dc.js';
+        var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+      })();
+
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','//www.google-analytics.com/analytics.js','_gaUTracker');
+
+      _gaUTracker('create', 'UA-82702-49', {
+        clientId: _visit.multitrackToken(),
+        cookieDomain: 'shopify.com',
+        legacyCookieDomain: 'shopify.com'
+      });
+      _gaUTracker('send', 'pageview');
+    </script>
+
     </body>
 </html>
