--- a/_includes/head.html
+++ b/_includes/head.html
@@ -35,11 +35,11 @@
 
 <meta property='st:title' content="{{ page.title }}">
 
-<link rel="shortcut icon" href="{{ '/favicon.ico' | asset_url }}" type="image/x-icon">
+<link rel="shortcut icon" href="//cdn.shopify.com/assets/favicon.ico" type="image/x-icon">
 
-<link href="{{ 'css/main.css' | asset_url }}" rel="stylesheet" type="text/css">
+<link href="http://shopify.github.io/Timber/css/main.css" rel="stylesheet" type="text/css">
 <!--[if lt IE 9]>
-  <link href="{{ 'css/ie.css' | asset_url }}" rel="stylesheet" type="text/css">
+  <link href="http://shopify.github.io/Timber/css/ie.css" rel="stylesheet" type="text/css">
 <![endif]-->
 
 <link href='http://fonts.googleapis.com/css?family=Cabin:400,600' rel='stylesheet' type='text/css'>
