Added cshold twitter link for support/update following

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -24,7 +24,7 @@
         <div class="grid-item large--seven-twelfths push--large--one-sixth">
           <h4 class="footer-title">Feedback</h4>
           <p>Submit issues on <a href="https://github.com/Shopify/Timber/issues" class="footer-link">Github</a> or send us feedback at <a href="mailto:timber@shopify.com?subject=Timber&nbsp;Feedback" class="footer-link">timber@shopify.com</a>.<br>
-            You can follow us on Twitter <a href="https://twitter.com/ShopifyTimber" title="Follow Us" class="footer-link">@ShopifyTimber</a>.</p>
+          Follow the author <a href="https://twitter.com/cshold" title="Follow Us" class="footer-link">@cshold</a> on Twitter for updates.</p>
         </div>
       </div>
     </div>
