--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -7,16 +7,16 @@
           <h4 class="footer-title">Shopify Themes</h4>
           <div class="grid">
             <div class="grid-item one-half">
-              <p><a href="https://themes.shopify.com/services/themes/guidelines?ref=Timber" title="Guidelines for selling themes" class="footer-link">Selling Themes</a></p>
+              <p><a href="https://themes.shopify.com/services/themes/guidelines?utm_source=Timber&utm_medium=os" title="Guidelines for selling themes" class="footer-link">Selling Themes</a></p>
             </div>
             <div class="grid-item one-half">
-              <p><a href="https://ecommerce.shopify.com/c/ecommerce-design?ref=Timber" title="Meet the community" class="footer-link">Shopify Forums</a></p>
+              <p><a href="https://ecommerce.shopify.com/c/ecommerce-design?utm_source=Timber&utm_medium=os" title="Meet the community" class="footer-link">Shopify Forums</a></p>
             </div>
             <div class="grid-item one-half">
-              <p><a href="http://www.shopify.ca/partners?ref=Timber" title="Earn money from referrals" class="footer-link">Partner Program</a></p>
+              <p><a href="http://www.shopify.ca/partners?utm_source=Timber&utm_medium=os" title="Earn money from referrals" class="footer-link">Partner Program</a></p>
             </div>
             <div class="grid-item one-half">
-              <p><a href="http://docs.shopify.com/themes/liquid-basics?ref=Timber" title="Learn the basics of Liquid templating" class="footer-link">Liquid Basics</a></p>
+              <p><a href="http://docs.shopify.com/themes/liquid-basics?utm_source=Timber&utm_medium=os" title="Learn the basics of Liquid templating" class="footer-link">Liquid Basics</a></p>
             </div>
           </div>
         </div>
@@ -37,7 +37,7 @@
           Timber {{ page.version }} © by Shopify Inc. Built and maintained by the <a href="mailto:timber@shopify.com" title="Corgis rule" class="footer-link">Themes Team</a>.
         </div>
         <div class="grid-item large--three-twelfths">
-          <a href="http://www.shopify.com?ref=Timber" title="Shopify Home" class="shopify-logo large--right">Shopify</a>
+          <a href="http://www.shopify.com?utm_source=Timber&utm_medium=os" title="Shopify Home" class="shopify-logo large--right">Shopify</a>
         </div>
       </div>
     </div>
