Protocol-relative links

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -37,11 +37,11 @@
 
 <link rel="shortcut icon" href="//cdn.shopify.com/assets/favicon.ico" type="image/x-icon">
 
-<link href="http://shopify.github.io/Timber/css/main.css" rel="stylesheet" type="text/css">
+<link href="//shopify.github.io/Timber/css/main.css" rel="stylesheet" type="text/css">
 <!--[if lt IE 9]>
-  <link href="http://shopify.github.io/Timber/css/ie.css" rel="stylesheet" type="text/css">
+  <link href="//shopify.github.io/Timber/css/ie.css" rel="stylesheet" type="text/css">
 <![endif]-->
 
-<link href='http://fonts.googleapis.com/css?family=Cabin:400,600' rel='stylesheet' type='text/css'>
+<link href='//fonts.googleapis.com/css?family=Cabin:400,600' rel='stylesheet' type='text/css'>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
