Ajax cart docs for new quantity selectors

--- a/css/_timber-theme.scss
+++ b/css/_timber-theme.scss
@@ -1,5 +1,5 @@
 /*
-* Shopify Timber
+* Shopify Timber v1.2.0
 * Copyright 2014 Shopify Inc.
 * Author Carson Shold @cshold
 * Built with Sass - http://sass-lang.com/
@@ -22,6 +22,7 @@
   #Reset
   #Grid Setup
   #Basic Styles
+  #Helper Classes
   #Typography
   #Rich Text Editor
   #Links
@@ -655,11 +656,23 @@ body {
   padding-bottom: $gutter*2;
 }
 
+// ==============================================================================
+// #Helper Classes
+// ==============================================================================
 .left { float: left; }
 .right { float: right; }
 .text-center { text-align: center; }
 .text-right { text-align: right; }
 .hidden { display: none; }
+
+.display-table {
+  display: table;
+}
+
+.display-table-cell {
+  display: table-cell;
+  vertical-align: middle;
+}
 
 
 // ==============================================================================
@@ -681,10 +694,9 @@ select {
 
 h1, h2, h3, h4, h5, h6,
 .h1, .h2, .h3, .h4, .h5, .h6 {
+  display: block;
   font-family: $headerFontStack;
   font-weight: normal;
-  margin-bottom: 10px;
-  margin-top: 0.2em;
   margin-bottom: 0.5em;
   line-height: 1.4;
 
@@ -694,6 +706,11 @@ h1, h2, h3, h4, h5, h6,
     &:hover {
       text-decoration: underline;
     }
+  }
+
+  // Add some top margin to headers from the rich text editor
+  .rte & {
+    margin-top: 0.2em;
   }
 }
 h1 a, h2 a, h3 a, h4 a, h5 a, h6 a,
