Added config.rb for compass. Updated to v1.2.0. Removed hard coded stylesheets

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -37,9 +37,9 @@
 
 <link rel="shortcut icon" href="//cdn.shopify.com/assets/favicon.ico" type="image/x-icon">
 
-<link href="//shopify.github.io/Timber/css/main.css" rel="stylesheet" type="text/css">
+<link href="/css/main.css" rel="stylesheet" type="text/css">
 <!--[if lt IE 9]>
-  <link href="//shopify.github.io/Timber/css/ie.css" rel="stylesheet" type="text/css">
+  <link href="/css/ie.css" rel="stylesheet" type="text/css">
 <![endif]-->
 
 <link href='//fonts.googleapis.com/css?family=Cabin:400,600' rel='stylesheet' type='text/css'>
