--- a/css/ie.css
+++ b/css/ie.css
@@ -1,4 +1,3 @@
-@charset "UTF-8";
 /* ==========================================================
 =============================================================
 
@@ -510,7 +509,7 @@
 =============================================================
 ========================================================== */
 /*
-* Shopify Timber v1.0
+* Shopify Timber v1.2.0
 * Copyright 2014 Shopify Inc.
 * Author Carson Shold @cshold
 * Built with Sass - http://sass-lang.com/
@@ -532,6 +531,7 @@
   #Reset
   #Grid Setup
   #Basic Styles
+  #Helper Classes
   #Typography
   #Rich Text Editor
   #Links
@@ -543,7 +543,7 @@
   #Buttons
   #Pagination
   #Site Header
-  #Site Nav
+  #Site Nav and Dropdowns
   #Site Footer
   #Product Grid and List Views
   #Tag List
@@ -563,6 +563,7 @@
 /* Text link colors */
 /* Text colors */
 /* Border colors */
+/* Nav and dropdown link background */
 /* Helper colors */
 /* Width variables */
 /* Radius */
@@ -621,9 +622,11 @@ pre {
 .grid-item.clear {
   clear: both; }
 
-/* You do not need to edit anything from this line onward; csswizardry-grids is good to go. Happy griddin’! */
+body {
+  background-color: pink; }
+
 /**
- * Drop relative positioning into silent classes which can’t take advantage of
+ * Drop relative positioning into silent classes which can't take advantage of
  * the `[class*="push--"]` and `[class*="pull--"]` selectors.
  */
 /*------------------------------------*\
@@ -632,7 +635,7 @@ pre {
 /**
  * 1. Allow the grid system to be used on lists.
  * 2. Remove any margins and paddings that might affect the grid system.
- * 3. Apply a negative `margin-left` to negate the columns’ gutters.
+ * 3. Apply a negative `margin-left` to negate the columns' gutters.
  */
 .grid, .grid--rev, .grid--full, .grid--right, .grid--center,
 .grid-uniform {
@@ -1733,7 +1736,9 @@ body {
   padding: 0 24px; }
 
 .main-content {
-  padding: 48px 24px; }
+  display: block;
+  padding-top: 48px;
+  padding-bottom: 48px; }
 
 .left {
   float: left; }
@@ -1746,6 +1751,16 @@ body {
 
 .text-right {
   text-align: right; }
+
+.hidden {
+  display: none; }
+
+.display-table {
+  display: table; }
+
+.display-table-cell {
+  display: table-cell;
+  vertical-align: middle; }
 
 body,
 input,
@@ -1760,37 +1775,43 @@ select {
   -webkit-font-smoothing: antialiased;
   -webkit-text-size-adjust: 100%; }
 
-h1, h2, h3, h4, h5, h6 {
+h1, h2, h3, h4, h5, h6,
+.h1, .h2, .h3, .h4, .h5, .h6 {
+  display: block;
   font-family: "HelveticaNeue", "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-weight: normal;
-  margin-bottom: 10px;
-  margin-top: 0.2em;
   margin-bottom: 0.5em;
   line-height: 1.4; }
-  h1 a, h2 a, h3 a, h4 a, h5 a, h6 a {
+  h1 a, h2 a, h3 a, h4 a, h5 a, h6 a,
+  .h1 a, .h2 a, .h3 a, .h4 a, .h5 a, .h6 a {
     text-decoration: none; }
-    h1 a:hover, h2 a:hover, h3 a:hover, h4 a:hover, h5 a:hover, h6 a:hover {
+    h1 a:hover, h2 a:hover, h3 a:hover, h4 a:hover, h5 a:hover, h6 a:hover,
+    .h1 a:hover, .h2 a:hover, .h3 a:hover, .h4 a:hover, .h5 a:hover, .h6 a:hover {
       text-decoration: underline; }
+  .rte h1, .rte h2, .rte h3, .rte h4, .rte h5, .rte h6, .rte
+  .h1, .rte .h2, .rte .h3, .rte .h4, .rte .h5, .rte .h6 {
+    margin-top: 0.2em; }
 
-h1 a, h2 a, h3 a, h4 a, h5 a, h6 a {
+h1 a, h2 a, h3 a, h4 a, h5 a, h6 a,
+.h1 a, .h2 a, .h3 a, .h4 a, .h5 a, .h6 a {
   font-weight: inherit; }
 
-h1 {
+h1, .h1 {
   font-size: 3em; }
 
-h2 {
+h2, .h2 {
   font-size: 2.429em; }
 
-h3 {
+h3, .h3 {
   font-size: 2em; }
 
-h4 {
+h4, .h4 {
   font-size: 1.429em; }
 
-h5 {
+h5, .h5 {
   font-size: 1.143em; }
 
-h6 {
+h6, .h6 {
   font-size: 1em; }
 
 p {
@@ -1875,12 +1896,7 @@ ol.alpha {
 
 ul ul, ul ol,
 ol ol, ol ul {
-  margin: 4px 0 5px 20px;
-  font-size: 90%; }
-
-ul ul li, ul ol li,
-ol ol li, ol ul li {
-  margin-bottom: 6px; }
+  margin: 4px 0 5px 20px; }
 
 li {
   margin-bottom: 0.25em; }
@@ -1927,6 +1943,13 @@ img.auto,
 form {
   margin-bottom: 24px; }
 
+.btn, .btn-secondary,
+a.btn-secondary,
+button,
+input,
+textarea {
+  -webkit-appearance: none; }
+
 input,
 textarea,
 select,
@@ -1959,7 +1982,7 @@ input[type="password"],
 input[type="email"],
 input[type="file"],
 input[type="number"],
-input[type="telephone"],
+input[type="tel"],
 textarea,
 select {
   border: 1px solid #e5e5e5;
@@ -1972,7 +1995,7 @@ select {
   input[type="email"]:focus,
   input[type="file"]:focus,
   input[type="number"]:focus,
-  input[type="telephone"]:focus,
+  input[type="tel"]:focus,
   textarea:focus,
   select:focus {
     border: 1px solid #cccccc; }
@@ -1985,8 +2008,8 @@ select {
   input[type="file"].disabled,
   input[type="number"][disabled],
   input[type="number"].disabled,
-  input[type="telephone"][disabled],
-  input[type="telephone"].disabled,
+  input[type="tel"][disabled],
+  input[type="tel"].disabled,
   textarea[disabled],
   textarea.disabled,
   select[disabled],
@@ -2033,7 +2056,7 @@ form.form-horizontal,
   form.form-horizontal input[type="email"],
   form.form-horizontal input[type="file"],
   form.form-horizontal input[type="number"],
-  form.form-horizontal input[type="telephone"],
+  form.form-horizontal input[type="tel"],
   form.form-horizontal textarea,
   form.form-horizontal select,
   .form-horizontal input[type="text"],
@@ -2041,7 +2064,7 @@ form.form-horizontal,
   .form-horizontal input[type="email"],
   .form-horizontal input[type="file"],
   .form-horizontal input[type="number"],
-  .form-horizontal input[type="telephone"],
+  .form-horizontal input[type="tel"],
   .form-horizontal textarea,
   .form-horizontal select {
     display: inline-block;
@@ -2054,7 +2077,7 @@ input[type="password"].error,
 input[type="email"].error,
 input[type="file"].error,
 input[type="number"].error,
-input[type="telephone"].error,
+input[type="tel"].error,
 textarea.error {
   border-color: #dc0000;
   background-color: #fff6f6;
@@ -2089,11 +2112,16 @@ label.error {
 .input-group-field,
 .input-group-btn {
   display: table-cell;
-  vertical-align: top;
+  vertical-align: middle;
   margin: 0; }
 
-.input-group-field {
-  width: 100%; }
+.input-group .btn, .input-group .btn-secondary,
+.input-group .input-group-field {
+  height: 37px; }
+
+.input-group .input-group-field {
+  width: 100%;
+  margin-bottom: 0; }
 
 .input-group-btn {
   position: relative;
@@ -2122,6 +2150,7 @@ a.btn-secondary {
   -ms-user-select: none;
   -o-user-select: none;
   user-select: none;
+  -webkit-appearance: none;
   border-radius: 3px;
   background-color: #747474; }
   .btn.small, .small.btn-secondary,
@@ -2289,17 +2318,21 @@ a.btn-secondary {
 .nav-bar ul {
   margin: 0; }
 
-.nav-bar li {
-  display: inline-block;
-  margin: 0; }
-
-.nav-bar a {
-  display: block;
-  text-decoration: none;
-  padding: 12px; }
-
 .site-nav {
   font-size: 1.2em; }
+  .site-nav li {
+    margin: 0;
+    display: block; }
+  .site-nav > li {
+    position: relative;
+    display: inline-block; }
+    .site-nav > li:first-child a {
+      padding-left: 0; }
+  .site-nav a {
+    display: block;
+    text-decoration: none;
+    padding: 12px;
+    white-space: nowrap; }
   @media screen and (max-width: 768px) {
     .site-nav {
       margin: 0 auto;
@@ -2307,8 +2340,18 @@ a.btn-secondary {
   @media screen and (min-width: 768px) {
     .site-nav {
       float: left; } }
-  .site-nav li:first-child a {
-    padding-left: 0; }
+
+.site-nav-dropdown {
+  display: none;
+  position: absolute;
+  left: 0;
+  z-index: 5; }
+  .site-nav li:hover .site-nav-dropdown {
+    display: block; }
+  .site-nav-dropdown a {
+    background-color: #f6f6f6; }
+    .site-nav-dropdown a:hover, .site-nav-dropdown a:active {
+      background-color: #dddddd; }
 
 .nav-search {
   padding: 7px 0; }
@@ -2343,6 +2386,9 @@ a.btn-secondary {
   width: 48px;
   margin: 0 6px; }
 
+.lt-ie9 .payment-icons {
+  display: none; }
+
 .product-list-thumb {
   display: block;
   float: left;
@@ -2363,6 +2409,11 @@ a.btn-secondary {
 
 .product-price {
   font-weight: bold; }
+
+.product-variants {
+  display: none; }
+  .no-js .product-variants {
+    display: block; }
 
 .product-photo-container {
   margin-bottom: 24px; }
@@ -2421,10 +2472,12 @@ a.btn-secondary {
 
 .demo-image {
   background: url("//cdn.shopify.com/s/files/1/0383/9765/t/1/assets/blankslate-producticon.png?4") no-repeat center center #eeeeee;
+  display: block;
   text-align: center;
   padding: 100px 0;
   color: #aaa;
-  font-size: 0.875em; }
+  font-size: 0.875em;
+  text-decoration: none; }
 
 /*
  * Helper Function to Convert px to em
