Showcasing font icon demo

--- a/css/objects/_buttons.scss
+++ b/css/objects/_buttons.scss
@@ -54,3 +54,16 @@
     border-bottom-color: #fff;
   }
 }
+
+// ==============================================================================
+// #Icon Fonts Demo
+// ==============================================================================
+.icon-font-demo {
+  margin-bottom: 0;
+  font-size: 30px;
+  color: #333;
+
+  li {
+    margin-right: 10px;
+  }
+}
