--- a/css/main.css
+++ b/css/main.css
@@ -523,8 +523,8 @@
 
 @font-face {
   font-family: "icons";
-  src: url(" //cdn.shopify.com/s/files/1/0383/9765/t/3/assets/icons.eot?8832  ");
-  src: url(" //cdn.shopify.com/s/files/1/0383/9765/t/3/assets/icons.eot?8832 ?#iefix ") format("embedded-opentype"), url(" //cdn.shopify.com/s/files/1/0383/9765/t/3/assets/icons.woff?8832  ") format("woff"), url(" //cdn.shopify.com/s/files/1/0383/9765/t/3/assets/icons.ttf?8832  ") format("truetype"), url(" //cdn.shopify.com/s/files/1/0383/9765/t/3/assets/icons.svg?8832 #atlantic-icons ") format("svg");
+  src: url(" //cdn.shopify.com/s/files/1/0383/9765/t/3/assets/icons.eot?8850  ");
+  src: url(" //cdn.shopify.com/s/files/1/0383/9765/t/3/assets/icons.eot?8850 ?#iefix ") format("embedded-opentype"), url(" //cdn.shopify.com/s/files/1/0383/9765/t/3/assets/icons.woff?8850  ") format("woff"), url(" //cdn.shopify.com/s/files/1/0383/9765/t/3/assets/icons.ttf?8850  ") format("truetype"), url(" //cdn.shopify.com/s/files/1/0383/9765/t/3/assets/icons.svg?8850 #atlantic-icons ") format("svg");
   font-weight: normal;
   font-style: normal; }
 
@@ -1896,76 +1896,86 @@ label.error {
   display: inline;
   font-family: "icons";
   text-decoration: none;
-  -webkit-font-smoothing: antialiased; }
+  speak: none;
+  font-style: normal;
+  font-weight: normal;
+  font-variant: normal;
+  text-transform: none;
+  line-height: 1;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale; }
 
-.icon-diners_club:before {
-  content: 'c'; }
-
-.icon-maestro:before {
-  content: 'm'; }
-
-.icon-interact:before {
-  content: 'I'; }
-
-.icon-visa:before {
-  content: 'V'; }
-
-.icon-master:before {
-  content: 'M'; }
-
-.icon-discover:before {
-  content: 'D'; }
-
-.icon-dk:before {
-  content: 'd'; }
+.icon-cart:before {
+  content: "\5b"; }
 
 .icon-american_express:before {
-  content: 'A'; }
+  content: "\41"; }
 
-.icon-google:before {
-  content: 'G'; }
+.icon-master:before {
+  content: "\4d"; }
+
+.icon-visa:before {
+  content: "\56"; }
 
 .icon-paypal:before {
-  content: 'P'; }
+  content: "\50"; }
 
-.icon-jcb:before {
-  content: 'J'; }
-
-.icon-cirrus:before {
-  content: 'C'; }
+.icon-discover:before {
+  content: "\44"; }
 
 .icon-stripe:before {
-  content: 'S'; }
+  content: "\53"; }
+
+.icon-interac:before {
+  content: "\49"; }
+
+.icon-cirrus:before {
+  content: "\43"; }
+
+.icon-google_waller:before {
+  content: "\47"; }
+
+.icon-dk:before {
+  content: "\64"; }
+
+.icon-jcb:before {
+  content: "\4a"; }
+
+.icon-maestro:before {
+  content: "\6d"; }
+
+.icon-diners_club:before {
+  content: "\63"; }
 
 .icon-bitcoin:before {
-  content: 'B'; }
-
-.icon-twitter:before {
-  content: 'T'; }
-
-.icon-facebook:before {
-  content: 'f'; }
-
-.icon-pinterest:before {
-  content: 'p'; }
-
-.icon-fancy:before {
-  content: 'F'; }
-
-.icon-google:before {
-  content: 'g'; }
-
-.icon-instagram:before {
-  content: 'i'; }
-
-.icon-youtube:before {
-  content: 'y'; }
-
-.icon-vimeo:before {
-  content: 'v'; }
+  content: "\42"; }
 
 .icon-tumblr:before {
-  content: 't'; }
+  content: "\74"; }
+
+.icon-vimeo:before {
+  content: "\76"; }
+
+.icon-youtube:before {
+  content: "\79"; }
+
+.icon-google:before {
+  content: "\67"; }
+
+.icon-twitter:before {
+  content: "\54"; }
+
+.icon-facebook:before {
+  content: "\66"; }
+
+.icon-pinterest:before {
+  content: "\70"; }
+
+.icon-instagram:before {
+  content: "\69"; }
+
+.icon-fancy:before {
+  content: "\46"; }
 
 .payment-icons {
   -webkit-user-select: none;
@@ -2469,6 +2479,13 @@ html, body {
   .text-link-on-orange:visited:hover {
     color: #fff;
     border-bottom-color: #fff; }
+
+.icon-font-demo {
+  margin-bottom: 0;
+  font-size: 30px;
+  color: #333; }
+  .icon-font-demo li {
+    margin-right: 10px; }
 
 .cta-wrapper {
   background-color: #e58b1a;
